# xiaoqiang_track

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: baidu_track.h  body_pose_track.h  pose_tracker.h  tracker.h  tracking_node.h  xiaoqiang_track_point.h
launch/: track_baidu.launch  track_body.launch  track_kernel.launch  tracking.launch
msg/: TrackTarget.msg
src/: baidu_track.cpp  body_pose_track.cpp  tracker.cpp  tracking_node.cpp
src/xiaoqiang_track/: controller_node.py  track_body.py  track_kernel_node.py  tracker.cpp  tracker.py
src/xiaoqiang_track/engines/: baidu_track.py
srv/: TrackKernel.srv
